# temana

./: CNNmodelAVFV_1000_5000.ckpt  CNNmodelAVFV_150_5000.ckpt  CNNmodelAVFV_250_5000.ckpt  CNNmodelAVFV_500_5000.ckpt  LICENSE  README.md  pyproject.toml  rebuilding07AVFV.ipynb  signal_generator.py  temana.py  tercermodelogeneracion.ipynb  test.ipynb  test_notebook.ipynb
src/temana/: SignalGenerator.py  __init__.py  __main__.py  args_parser.py  interpolators.py  signal_generator.py
tests/: test_signal_generator.py
